# rocky-worlds-data-challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.rst  conftest.py  pyproject.toml  tox.ini
.github/workflows/: ci_cron_weekly.yml  ci_workflows.yml  publish_pypi.yml
devtools/: normalize_notebook_metadata.py
docs/: Makefile  api.rst  api_classes.rst  api_functions.rst  conf.py  index.rst  installation.rst  make.bat
docs/tutorials/: prepare-submission.rst
rocky_worlds_data_challenge/: __init__.py  eclipsing_system.py  results.py  widgets.py
rocky_worlds_data_challenge/data/: README.rst  form.json
rocky_worlds_data_challenge/styles/: __init__.py  interactive_form.css
rocky_worlds_data_challenge/tests/: test_eclipsing_system.py  test_results.py
simulator/: README.md
tutorials/: prepare-submission.ipynb
