[project]
name = "rocky-worlds-data-challenge"
description = "Utilities and Notebooks for the Rocky Worlds DDT Data Challenge"
authors = [
    {name = "Brett M. Morris", email = "bmmorris@stsci.edu"},
    {name = "Taylor J. Bell", email = "tbell@stsci.edu"},
    {name = "STScI"},
]
dependencies = [
    "astropy>=6",
    "h5py",
    "ipyvuetify",
    "ipywidgets",
    "jupyterlab_widgets",
    "numpy",
    "pandas",
    "solara",
]
requires-python = ">=3.10"
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE.rst"]
keywords = ["astronomy", "astrophysics"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]

[build-system]
requires = [
    "setuptools>=77",
    "setuptools_scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://rockyworlds.stsci.edu"

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
    "pytest-astropy-header",
    "pytest-doctestplus",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "stsci_rtd_theme",
]
dev = [
    "bandit",
    "build",
    "coverage",
    "nbstripout",
    "pre-commit",
    "pre-commit-hooks",
    "pytest-cov",
    "ruff",
    "setuptools_scm",
    "tox",
    "twine",
]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
include = ["rocky_worlds_data_challenge*"]

[tool.setuptools.package-data]
rocky_worlds_data_challenge = ["data/*.json", "data/*.rst", "styles/*.css"]

[tool.setuptools_scm]
write_to = "rocky_worlds_data_challenge/version.py"

[tool.pytest.ini_options]
minversion = "5.0"
norecursedirs = [
    "build",
    "docs/_build",
]
astropy_header = true
doctest_plus = "enabled"

[tool.coverage.run]
source = ["rocky_worlds_data_challenge"]
omit = [
    "rocky_worlds_data_challenge/tests/*",
    "rocky_worlds_data_challenge/version*",
    "*/rocky_worlds_data_challenge/tests/*",
    "*/rocky_worlds_data_challenge/version*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main\\(.*\\):",
    "pragma: py{ignore_python_version}",
    "def _ipython_key_completions_",
]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
]
